<resources>
    <string name="app_name">Carte - Рестораны и кафе</string>
    <string name="app_name_short">Carte</string>

    <string name="action_search_city">Поиск города</string>
    <string name="action_search_restaurant">Поиск ресторана</string>
    <string name="action_open_settings">Настройки</string>
    <string name="action_retry">Нажмите здесь, чтобы повторить попытку</string>

    <string name="regions_choose_region">Выберите область</string>

    <string name="cities_choose_city">Выберите город</string>

    <string name="action_show_map">На карте</string>
    <string name="action_show_more">Подробнее</string>

    <string name="title_map">На карте</string>
    <string name="title_phones">Телефоны</string>
    <string name="title_open_times">Время работы</string>

    <string name="details_delivery">Доставка</string>
    <string name="details_booking">Бронь</string>
    <string name="details_open_time">%1$d−%2$d</string>
    <string name="details_average_bill">%1$d руб.</string>
    <string name="details_menu_updated">Меню обновлено %1$s</string>

    <string name="dish_price">%1$f р.</string>
    <string name="dish_weight">%1$s г</string>

    <string name="error_api_default">Что-то пошло не так!</string>
    <string name="error_api_retry">Повторите попытку позже!</string>
    <string name="error_no_connection">Нет интернет-соединения!</string>
</resources>
